# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--hun@n-dimensional.de--2004-public/ndim-utils--main--0.1
#

2004-06-21 14:41:39 GMT	Hans Ulrich Niedermann <hun@n-dimensional.de>	patch-72

    Summary:
      Implement log updates via HTTP
    Revision:
      ndim-utils--main--0.1--patch-72

    Implement HTTP parser, and adapted docs accordingly.

    modified files:
     ChangeLog traffic/ppp-traffic-analysis.py


2004-06-21 12:29:57 GMT	Hans Ulrich Niedermann <hun@n-dimensional.de>	patch-71

    Summary:
      Overflow/Accumulation fix
    Revision:
      ndim-utils--main--0.1--patch-71

    Executive summary:
    - handle overflowing 32bit counters
    - handle steadily incrementing counter values
    
    Implemented by splitting parser into multiple stages.

    modified files:
     ChangeLog traffic/ppp-traffic-analysis.py


2004-06-21 11:43:21 GMT	Hans Ulrich Niedermann <hun@n-dimensional.de>	patch-70

    Summary:
      add ppp-traffic-analysis.py stuff
    Revision:
      ndim-utils--main--0.1--patch-70

    add ppp-traffic-analysis.py stuff
    

    new files:
     traffic/.arch-ids/=id traffic/Makefile.am
     traffic/ppp-traffic-analysis.py

    modified files:
     ChangeLog Makefile.am configure.ac

    new directories:
     traffic traffic/.arch-ids


2004-06-11 03:06:49 GMT	Hans Ulrich Niedermann <hun@n-dimensional.de>	patch-69

    Summary:
      arch inventory housekeeping
    Revision:
      ndim-utils--main--0.1--patch-69

    arch inventory housekeeping
    

    modified files:
     .arch-inventory ChangeLog admin-py/.arch-inventory


2004-06-11 02:45:28 GMT	Hans Ulrich Niedermann <hun@n-dimensional.de>	patch-68

    Summary:
      whois.py: understand more information from servers
    Revision:
      ndim-utils--main--0.1--patch-68

    whois.py: understand more information from servers
    

    modified files:
     ChangeLog admin-py/whois-tool.py admin-py/whois.py

