@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--hun@n-dimensional.de--2004-public/ndim-utils--main--0.1
 #
 
+2004-06-21 15:11:41 GMT	Hans Ulrich Niedermann <hun@n-dimensional.de>	patch-73
+
+    Summary:
+      
+    Revision:
+      ndim-utils--main--0.1--patch-73
+
+
+    modified files:
+     ChangeLog traffic/ppp-traffic-analysis.py
+
+
 2004-06-21 14:41:39 GMT	Hans Ulrich Niedermann <hun@n-dimensional.de>	patch-72
 
     Summary:
